# Transform2022_SelfSupervisedDenoising

./: .uvrc  ARCHITECTURE.md  AUDIT_REPORT.md  DECISIONS.md  LICENSE  MODERNIZATION.md  README.md  Tutorial 3 - Using Entrypoints.ipynb  USAGE.md  pyproject.toml
examples/: Tracewise_Denoise_w_blindspot-denoise_lib.ipynb  demo_pipeline.ipynb  demo_pipeline.py  example_usage.py  inference_pipeline.ipynb  noise_validation.ipynb
src/blindspot_denoise/: __init__.py  add_noise.py  config.py  infer.py  models.py  preprocessing.py  train.py  training.py  training_loop.py  utils.py  viz.py
src/seismic_denoising/: __init__.py  config.py  infer.py  models.py  preprocessing.py  train.py  training.py  utils.py
tests/: __init__.py  generate_test_data.py
tutorials_orig/: Solution_3.1_trace-wise_denoise_synth-test-data.ipynb
