[project]
name = "blindspot-denoise"
version = "0.1.0"
description = "Self-supervised deep learning noise attenuation for seismic data"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Claire Birnie", email = "claire.birnie@kaust.edu.sa"},
    {name = "Sixiu Liu", email = "sixiu.liu@kaust.edu.sa"}
]
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "tqdm",
    "matplotlib",
    "pydantic-settings",
    "typer",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
train = "blindspot_denoise.train:main"
infer = "blindspot_denoise.infer:main"

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

