[project]
name = "blindspot-denoise"
version = "0.1.0"
description = "Self-supervised deep learning noise attenuation for seismic data"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Claire Birnie", email = "claire.birnie@kaust.edu.sa"},
    {name = "Sixiu Liu", email = "sixiu.liu@kaust.edu.sa"}
]
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "tqdm",
    "matplotlib",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
train = "blindspot_denoise.train:main"
infer = "blindspot_denoise.infer:main"
add-noise = "blindspot_denoise.add_noise:main"

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

